--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 
         <script src={{ static_url("js/vendor/jquery.caret.min.js") }}></script>
         <script src={{ static_url("js/vendor/jquery.tag-editor.min.js") }}></script>
+        <script src={{ static_url("js/vendor/jquery.cookie.js") }}></script>
 
         <link rel="stylesheet" href={{ static_url("css/jquery.tag-editor.css") }}>
 
